--- a/home.html
+++ b/home.html
@@ -8,38 +8,17 @@
         <title>Home - My first website.</title>
         <meta name="description" content="This is my website">
         <meta charset ="utf-8">
-        <link href="styles.css" rel = "stylesheet"/>
-        <!-- rel = 관계-->
         <style>
-            body {
-                height: 1000vh;
-                margin: 50px;
+            a{
+                color:white;
+                background-color: tomato;
+                text-decoration: none;
+                padding: 3px 5px;
+                border-radius: 5px;
             }
-            div{
-                width: 300px;
-                height: 300px;
-                background-color: wheat;
-                position: relative;
-            }
-            .green{
-                background-color: teal;
-                position: fixed;
-            }
-            #diffent {
-                background-color: wheat;
-            }
-            
         </style>
-       
-       <table>
-
-       </table>
     </head>
     <body>
-        <div>
-            <div class="green">
-
-            </div>
-        </div>
+            <a href="#"> Go Home</a>
     </body>
 </html>
